fix text saying that linkPreviews are only for some websites
The fetch for every possible url is already enabled

fixes #552

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -776,7 +776,7 @@
     "ignoreCase": true
   },
   "linkPreviewDescription": {
-    "message": "Previews are supported for Imgur, Instagram, Pinterest, Reddit, and YouTube links",
+    "message": "Previews are supported for most urls",
     "description": "Description shown for the Link Preview option ",
     "androidKey": "preferences__previews_are_supported_for"
   },
