lights glowing but not yet in order.
WIP glow cycle.

Glow animation working.

Glow animation working, modal no longer interferring with left menu margins.

Cleaning up code. Adding PR suggestions.

Adding typing.

Refactor edit profile modal dialog to no longer use the signal code.

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1868,5 +1868,17 @@
   },
   "learnMore": {
     "message": "Learn More"
+  },
+  "unknownCountry": {
+    "message": "Unknown Country",
+    "description": "When an onion path node is unable to find the country for an IP address."
+  },
+  "device": {
+    "message": "Device",
+    "description": "The device of the client running Session"
+  },
+  "destination": {
+    "message": "Destination",
+    "description": "The destination that the message is being sent to"
   }
 }
