add ONS resolve for new ONS and loading on message overlay

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1143,9 +1143,13 @@
     "description": "Label underneath number a user enters that is not an existing contact"
   },
   "invalidNumberError": {
-    "message": "Invalid public key",
-    "description": "When a person inputs a public key that is invalid",
+    "message": "Invalid Session ID or ONS Name",
+    "description": "When a person inputs a session ID or an ons name that is invalid ",
     "androidKey": "fragment_new_conversation_invalid_public_key_message"
+  },
+  "failedResolveOns": {
+    "message": "Failed to resolve ONS name",
+    "description": "When a person inputs a an ons name that is not resolved "
   },
   "successUnlinked": {
     "message": "Your device was unlinked successfully",
@@ -1603,17 +1607,7 @@
     "message": "Invalid Pubkey Format",
     "description": "Error string shown when user types an invalid pubkey format"
   },
-  "lnsMappingNotFound": {
-    "message": "There is no LNS mapping associated with this name",
-    "description": "Shown in toast if user enters an unknown LNS name"
-  },
-  "lnsLookupTimeout": {
-    "message": "LNS lookup timed out",
-    "description": "Shown in toast if user enters an unknown LNS name"
-  },
-  "lnsTooFewNodes": {
-    "message": "Not enough nodes currently active for LNS lookup"
-  },
+
   "emptyGroupNameError": {
     "message": "Please enter a group name",
     "description": "Error message displayed on empty group name",
@@ -1750,8 +1744,11 @@
     "message": "Enter Session ID",
     "androidKey": "activity_link_device_enter_session_id_tab_title"
   },
+  "enterSessionIDOrONSName": {
+    "message": "Enter Session ID or ONS name"
+  },
   "enterSessionIDOfRecipient": {
-    "message": "Enter Session ID of recipient",
+    "message": "Enter Session ID or ONS name of recipient",
     "androidKey": "fragment_enter_public_key_edit_text_hint"
   },
   "usersCanShareTheir...": {
