--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -96,7 +96,7 @@
     "message": "Toggle Developer Tools"
   },
   "menuSetupWithImport": {
-    "message": "Set Up with Import"
+    "message": "Set Up Direct Import"
   },
   "contextMenuNoSuggestions": {
     "message": "No Suggestions"
@@ -324,7 +324,7 @@
     "message": "You"
   },
   "audioPermissionNeededTitle": {
-    "message": "Microphone access required"
+    "message": "Microphone Access Required"
   },
   "audioPermissionNeeded": {
     "message": "You can enable microphone access under: Settings (Gear icon) => Privacy"
@@ -420,7 +420,7 @@
     "message": "Delete Messages For Everyone"
   },
   "deleteForEveryone": {
-    "message": "Delete For Everyone"
+    "message": "Delete for Everyone"
   },
   "deleteConversationConfirmation": {
     "message": "Permanently delete the messages in this conversation?"
@@ -702,7 +702,7 @@
     "message": "Auto Update"
   },
   "autoUpdateSettingDescription": {
-    "message": "Automatically check for updates on launch"
+    "message": "Automatically check for updates on startup"
   },
   "autoUpdateNewVersionTitle": {
     "message": "Session update available"
@@ -723,7 +723,7 @@
     "message": "Download"
   },
   "autoUpdateDownloadedMessage": {
-    "message": "The new update has been downloaded."
+    "message": "Update has been downloaded."
   },
   "autoUpdateDownloadInstructions": {
     "message": "Would you like to download the update?"
@@ -768,7 +768,7 @@
     "message": "Unban User"
   },
   "unbanUserConfirm": {
-    "message": "Are you sure you want to unban user?"
+    "message": "Are you sure you want to unban this user?"
   },
   "userUnbanned": {
     "message": "User unbanned successfully"
@@ -780,10 +780,10 @@
     "message": "Ban User"
   },
   "banUserConfirm": {
-    "message": "Are you sure you want to ban user?"
+    "message": "Are you sure you want to ban the user?"
   },
   "userBanned": {
-    "message": "User banned successfully"
+    "message": "Banned successfully"
   },
   "userBanFailed": {
     "message": "Ban failed!"
@@ -971,15 +971,6 @@
   "invalidPubkeyFormat": {
     "message": "Invalid Pubkey Format"
   },
-  "lnsMappingNotFound": {
-    "message": "There is no LNS mapping associated with this name"
-  },
-  "lnsLookupTimeout": {
-    "message": "LNS lookup timed out"
-  },
-  "lnsTooFewNodes": {
-    "message": "Not enough nodes currently active for LNS lookup"
-  },
   "emptyGroupNameError": {
     "message": "Please enter a group name"
   },
@@ -999,7 +990,7 @@
     "message": "Remove Moderators"
   },
   "addAsModerator": {
-    "message": "Add As Moderator"
+    "message": "Add as Moderator"
   },
   "removeFromModerators": {
     "message": "Remove From Moderators"
@@ -1029,7 +1020,7 @@
     "message": "Only the creator of the group can remove users"
   },
   "createAccount": {
-    "message": "Create Account"
+    "message": "Create account"
   },
   "signIn": {
     "message": "Sign In"
@@ -1122,7 +1113,7 @@
     "message": "Enter your recovery phrase"
   },
   "displayNameEmpty": {
-    "message": "Please pick a display name"
+    "message": "Please enter a display name"
   },
   "members": {
     "message": "$count$ members"
@@ -1149,7 +1140,7 @@
     "message": "Next"
   },
   "description": {
-    "message": "Description"
+    "message": "1 minute"
   },
   "invalidGroupNameTooShort": {
     "message": "Please enter a group name"
@@ -1180,5 +1171,7 @@
   },
   "orJoinOneOfThese": {
     "message": "Or join one of these..."
-  }
+  },
+  "helpUsTranslateSession": "Help us Translate Session",
+  "translation": "Translation"
 }
