remove context in locales

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -33,6 +33,10 @@
   "viewMenuToggleDevTools": "Toggle Developer Tools",
   "menuSetupWithImport": "Set Up Direct Import",
   "contextMenuNoSuggestions": "No Suggestions",
+  "openGroupInvitation": "Open group invitation",
+  "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you wan to join the $roomName$ open group?",
+  "enterSessionIDOrONSName": "Enter Session ID or ONS name",
   "loading": "Loading...",
   "optimizingApplication": "Optimizing application...",
   "chooseDirectory": "Choose folder",
@@ -210,6 +214,8 @@
   "disappearingMessages": "Disappearing messages",
   "changeNickname": "Change Nickname",
   "clearNickname": "Clear Nickname",
+  "nicknamePlaceholder": "New Nickname",
+  "changeNicknameMessage": "Enter a nickname for this user",
   "timerOption_0_seconds_abbreviated": "off",
   "timerOption_5_seconds_abbreviated": "5s",
   "timerOption_10_seconds_abbreviated": "10s",
@@ -332,7 +338,6 @@
   "addAsModerator": "Add as Moderator",
   "removeFromModerators": "Remove From Moderators",
   "add": "Add",
-  "groupInvitation": "Group Invitation",
   "addingContacts": "Adding contacts to",
   "noContactsToAdd": "No contacts to add",
   "noMembersInThisGroup": "No other members in this group",
