--- a/_locales/id/messages.json
+++ b/_locales/id/messages.json
@@ -158,7 +158,7 @@
   "permissions": "Perizinan",
   "general": "Umum",
   "linkPreviewsTitle": "Kirim pratinjau tautan",
-  "linkPreviewDescription": "Previews are supported for Imgur, Instagram, Pinterest, Reddit, and YouTube links",
+  "linkPreviewDescription": "Previews are supported for most urls",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending or receiving link previews.",
   "mediaPermissionsTitle": "Microphone and Camera",
   "mediaPermissionsDescription": "Izinkan akses ke kamera dan mikrofon",
@@ -332,7 +332,6 @@
   "addAsModerator": "Add As Moderator",
   "removeFromModerators": "Remove From Moderators",
   "add": "Add",
-  "groupInvitation": "Group Invitation",
   "addingContacts": "Adding contacts to",
   "noContactsToAdd": "No contacts to add",
   "noMembersInThisGroup": "No other members in this group",
