--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -158,7 +158,7 @@
   "permissions": "权限",
   "general": "通用",
   "linkPreviewsTitle": "Send Link Previews",
-  "linkPreviewDescription": "Previews are supported for Imgur, Instagram, Pinterest, Reddit, and YouTube links",
+  "linkPreviewDescription": "Previews are supported for most urls",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending or receiving link previews.",
   "mediaPermissionsTitle": "Microphone and Camera",
   "mediaPermissionsDescription": "允许访问摄像头和麦克风",
@@ -332,7 +332,6 @@
   "addAsModerator": "Add As Moderator",
   "removeFromModerators": "Remove From Moderators",
   "add": "Add",
-  "groupInvitation": "Group Invitation",
   "addingContacts": "Adding contacts to",
   "noContactsToAdd": "No contacts to add",
   "noMembersInThisGroup": "No other members in this group",
@@ -362,7 +361,7 @@
   "newSession": "New Session",
   "searchFor...": "Search for conversations, contacts, and messages",
   "enterSessionID": "Enter Session ID",
-  "enterSessionIDOfRecipient": "Enter Session ID of recipient",
+  "enterSessionIDOfRecipient": "Enter Session ID or ONS name of recipient",
   "usersCanShareTheir...": "Users can share their Session ID by going into their account settings and tapping \"Share Session ID\", or by sharing their QR code.",
   "message": "Message",
   "appearanceSettingsTitle": "Appearance",
