reapply changes for japanese translation in #1632

--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -1,8 +1,8 @@
 {
   "privacyPolicy": "利用規約とプライバシーポリシー",
-  "copyErrorAndQuit": "Copy error and quit",
+  "copyErrorAndQuit": "エラーの文章をコピーして終了",
   "unknown": "不明",
-  "databaseError": "Database Error",
+  "databaseError": "データベースエラー",
   "mainMenuFile": "ファイル (&F)",
   "mainMenuEdit": "編集 (&E)",
   "mainMenuView": "見る (&V)",
@@ -71,12 +71,12 @@
   "thisMonth": "今月",
   "voiceMessage": "音声メッセージ",
   "dangerousFileType": "セキュリティ上の理由で許可されていない種類の添付ファイルです",
-  "stagedPreviewThumbnail": "Draft thumbnail link preview for $domain$",
-  "previewThumbnail": "Thumbnail link preview for $domain$",
-  "stagedImageAttachment": "Draft image attachment: $path$",
-  "oneNonImageAtATimeToast": "When including a non-image attachment, the limit is one attachment per message.",
-  "cannotMixImageAndNonImageAttachments": "You cannot mix non-image and image attachments in one message.",
-  "maximumAttachments": "You cannot add any more attachments to this message.",
+  "stagedPreviewThumbnail": "$domain$ のサムネイルリンクプレビュー（下書き）",
+  "previewThumbnail": "$domain$ のサムネイルリンクプレビュー",
+  "stagedImageAttachment": "添付画像（下書き）： $path$",
+  "oneNonImageAtATimeToast": "画像でないファイルを添付する場合、メッセージに添付できるファイルは1つのみです。",
+  "cannotMixImageAndNonImageAttachments": "画像ファイルと画像でないファイルを合わせてメッセージに添付できません。",
+  "maximumAttachments": "メッセージに添付できるファイルの数の上限に達しています。",
   "fileSizeWarning": "添付ファイルのサイズが上限を超えています",
   "unableToLoadAttachment": "添付中にエラーが発生しました。",
   "offline": "オフライン",
@@ -101,7 +101,7 @@
   "contactAvatarAlt": "$name$のアイコン",
   "downloadAttachment": "添付ファイルをダウンロード",
   "replyToMessage": "メッセージに返信",
-  "replyingToMessage": "Replying to:",
+  "replyingToMessage": "このメッセージへの返信：",
   "originalMessageNotFound": "元のメッセージが見つかりません",
   "originalMessageNotAvailable": "元のメッセージはすでに削除されています",
   "messageFoundButNotLoaded": "元のメッセージを見つけたが、ロードされていません。ロードするのにスクロールアップして下さい。",
@@ -112,7 +112,7 @@
   "audio": "音声",
   "video": "動画",
   "photo": "写真",
-  "cannotUpdate": "Cannot Update",
+  "cannotUpdate": "更新できませんでした",
   "cannotUpdateDetail": "Session Desktop failed to update, but there is a new version available. Please go to https://getsession.org/ and install the new version manually, then either contact support or file a bug about this problem.",
   "ok": "OK",
   "cancel": "キャンセル",
@@ -120,13 +120,13 @@
   "continue": "続行",
   "error": "エラー",
   "delete": "削除",
-  "deletePublicWarning": "Are you sure? This will permanently remove this message for everyone in this open group.",
-  "deleteMultiplePublicWarning": "Are you sure? This will permanently remove these messages for everyone in this open group.",
-  "deleteWarning": "Are you sure? Clicking 'delete' will permanently remove this message from this device only.",
-  "deleteMultipleWarning": "Are you sure? Clicking 'delete' will permanently remove these messages from this device only.",
+  "deletePublicWarning": "削除」を選択したら公開グループからメッセージが永久削除されます。よろしいですか?",
+  "deleteMultiplePublicWarning": "削除」を選択したら公開グループからメッセージが永久削除されます。よろしいですか?",
+  "deleteWarning": "「削除」を選択したら自分の端末からのみメッセージが永久削除されます。よろしいですか？",
+  "deleteMultipleWarning": "「削除」を選択したら自分の端末からのみメッセージが永久削除されます。よろしいですか？",
   "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
   "deleteThisMessage": "メッセージの削除",
-  "deleted": "Deleted",
+  "deleted": "メッセージが削除されました",
   "from": "From:",
   "to": "To:",
   "sent": "送信",
@@ -137,9 +137,9 @@
   "resend": "再送",
   "deleteMessage": "メッセージの削除",
   "deleteMessages": "メッセージを削除",
-  "deleteMessageForEveryone": "Delete Message For Everyone",
-  "deleteMessagesForEveryone": "Delete Messages For Everyone",
-  "deleteForEveryone": "Delete For Everyone",
+  "deleteMessageForEveryone": "全員からメッセージを削除",
+  "deleteMessagesForEveryone": "全員からメッセージを削除",
+  "deleteForEveryone": "全員から削除",
   "deleteConversationConfirmation": "この会話を完全に消去しますが，よろしいですか？",
   "clearAllData": "すべてのデータを消去する",
   "deleteAccountWarning": "これにより、メッセージ、Session、連絡先が完全に削除されます。",
@@ -151,7 +151,7 @@
   "imageCaptionIconAlt": "Icon showing that this image has a caption",
   "addACaption": "キャプション追加...",
   "copy": "コピーする",
-  "copySessionID": "Copy Session ID",
+  "copySessionID": "Session ID をコピー",
   "copyOpenGroupURL": "Copy Group's URL",
   "save": "保存",
   "saved": "Saved",
@@ -160,19 +160,19 @@
   "linkPreviewsTitle": "リンクプレビューを送る",
   "linkPreviewDescription": "プレビューはImgur、Instagram、Pinterest、RedditおよびYouTubeリンクをサポートしています",
   "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending or receiving link previews.",
-  "mediaPermissionsTitle": "Microphone and Camera",
+  "mediaPermissionsTitle": "マイクとカメラ",
   "mediaPermissionsDescription": "カメラとマイクへのアクセスを許可する",
-  "spellCheckTitle": "Spell Check",
+  "spellCheckTitle": "スペルチェック",
   "spellCheckDescription": "メッセージボックスに入力されたテキストのスペルチェックを有効にする",
   "spellCheckDirty": "You must restart Session to apply your new settings",
   "notifications": "通知",
-  "readReceiptSettingDescription": "See and share when messages have been read (enables read receipts in all sessions).",
+  "readReceiptSettingDescription": "メッセージが読まれた状態の表示と送信をする（すべてのセッションに既読通知を有功にする）。",
   "readReceiptSettingTitle": "既読通知",
-  "typingIndicatorsSettingDescription": "See and share when messages are being typed (applies to all sessions).",
+  "typingIndicatorsSettingDescription": "メッセージが入力中である状態の表示と送信をする（すべてのセッションに適用される）。",
   "typingIndicatorsSettingTitle": "入力中アイコン",
-  "zoomFactorSettingTitle": "Zoom Factor",
+  "zoomFactorSettingTitle": "ズーム",
   "notificationSettingsDialog": "新着メッセージの通知で表示する項目：",
-  "disableNotifications": "通知をミュート",
+  "disableNotifications": "通知を無効にする",
   "nameAndMessage": "差出人名とメッセージ",
   "noNameOrMessage": "なし",
   "nameOnly": "差出人名のみ",
@@ -227,13 +227,13 @@
   "youDisabledDisappearingMessages": "消えるメッセージを無効にしました。",
   "timerSetTo": "消えるメッセージの消去時間が$time$に設定されました",
   "noteToSelf": "自分用メモ",
-  "hideMenuBarTitle": "Hide Menu Bar",
-  "hideMenuBarDescription": "Toggle system menu bar visibility",
+  "hideMenuBarTitle": "メニューバーを隠す",
+  "hideMenuBarDescription": "メニューバーの表示を切り替える",
   "startConversation": "Start new conversation…",
   "invalidNumberError": "不正な番号です",
   "successUnlinked": "端末は正常にリンク解除されました",
-  "autoUpdateSettingTitle": "Auto Update",
-  "autoUpdateSettingDescription": "Automatically check for updates on launch",
+  "autoUpdateSettingTitle": "自動更新",
+  "autoUpdateSettingDescription": "起動時に自動的に更新の有無を確認する",
   "autoUpdateNewVersionTitle": "Sessionの新しい更新があります",
   "autoUpdateNewVersionMessage": "新しく生まれ変わったSessionがあります",
   "autoUpdateNewVersionInstructions": "更新を適用するにはSessionを再起動してください。",
@@ -272,14 +272,14 @@
   "userNeedsToHaveJoinedDesc": "An error happened. The user needs to have already joined the server for this ADD to work.",
   "noContactsForGroup": "まだ連絡先がありません",
   "copyMessage": "Copy message text",
-  "selectMessage": "Select message",
+  "selectMessage": "メッセージを選択",
   "editGroup": "グループを編集する",
   "editGroupName": "Edit group name",
   "updateGroupDialogTitle": "$name$を更新中...",
   "showRecoveryPhrase": "リカバリーフレーズ",
   "yourSessionID": "あなたの Session ID",
-  "setAccountPasswordTitle": "Set Account Password",
-  "setAccountPasswordDescription": "Require password to unlock Session’s screen. You can still receive message notifications while Screen Lock is enabled. Session’s notification settings allow you to customize information that is displayed",
+  "setAccountPasswordTitle": "アカウントのパスワード設定",
+  "setAccountPasswordDescription": "Session のスクリーンのロック解除にパスワードを要求する。スクリーンロック中にもメッセージの通知が受信できます。Session の通知設定でメッセージの通知に表示される情報を調整できます。",
   "changeAccountPasswordTitle": "Change Account Password",
   "changeAccountPasswordDescription": "Change your password",
   "removeAccountPasswordTitle": "Remove Account Password",
@@ -291,9 +291,9 @@
   "recoveryPhraseSavePromptMain": "リカバリーフレーズは、Session ID のマスターキーです。端末にアクセスできなくなった場合、これを使用して Session ID を復元できます。リカバリーフレーズを安全な場所に保管し、誰にも教えないでください。",
   "invalidOpenGroupUrl": "Invalid URL",
   "copiedToClipboard": "クリップボードにコピーされました",
-  "passwordViewTitle": "Type In Your Password",
+  "passwordViewTitle": "パスワード入力",
   "unlock": "ロック解除",
-  "password": "Password",
+  "password": "パスワード",
   "setPassword": "Set Password",
   "changePassword": "Change Password",
   "removePassword": "Remove Password",
@@ -302,7 +302,7 @@
   "invalidOldPassword": "Old password is invalid",
   "invalidPassword": "Invalid password",
   "noGivenPassword": "Please enter your password",
-  "passwordsDoNotMatch": "Passwords do not match",
+  "passwordsDoNotMatch": "パスワードが一致しません",
   "setPasswordInvalid": "Passwords do not match",
   "changePasswordInvalid": "The old password you entered is incorrect",
   "removePasswordInvalid": "Incorrect password",
@@ -317,30 +317,29 @@
   "connectingToServer": "接続中...",
   "connectToServerSuccess": "Successfully connected to open group",
   "setPasswordFail": "Failed to set password",
-  "passwordLengthError": "Password must be between 6 and 64 characters long",
-  "passwordTypeError": "Password must be a string",
-  "passwordCharacterError": "Password must only contain letters, numbers and symbols",
+  "passwordLengthError": "パスワードの長さを6文字から64文字にしてください",
+  "passwordTypeError": "パスワードは文字列でなければいけません",
+  "passwordCharacterError": "パスワードには英数字と記号の文字しか使えません",
   "remove": "削除",
-  "invalidSessionId": "Session ID が不正です",
+  "invalidSessionId": "Session ID が正しくありません",
   "invalidPubkeyFormat": "Invalid Pubkey Format",
   "emptyGroupNameError": "グループ名を入力してください",
-  "editProfileModalTitle": "Profile",
+  "editProfileModalTitle": "プロフィール",
   "groupNamePlaceholder": "グループ名",
   "inviteContacts": "友達にオススメする",
   "addModerators": "Add Moderators",
   "removeModerators": "Remove Moderators",
   "addAsModerator": "Add As Moderator",
   "removeFromModerators": "Remove From Moderators",
-  "add": "Add",
-  "groupInvitation": "Group Invitation",
+  "add": "追加",
   "addingContacts": "Adding contacts to",
   "noContactsToAdd": "No contacts to add",
   "noMembersInThisGroup": "No other members in this group",
   "noModeratorsToRemove": "no moderators to remove",
   "onlyAdminCanRemoveMembers": "You are not the creator",
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
-  "createAccount": "Create Account",
-  "signIn": "Sign In",
+  "createAccount": "アカウントを作成",
+  "signIn": "ログイン",
   "yourUniqueSessionID": "Session ID をご紹介します",
   "allUsersAreRandomly...": "Session ID は、Session で連絡を取るために使用できる一意のアドレスです。本当のアイデンティティに関係なく、あなたの Session ID は設計上完全に匿名でプライベートです。",
   "getStarted": "Get started",
@@ -351,15 +350,15 @@
   "anonymous": "Anonymous",
   "removeResidueMembers": "Clicking ok will also remove those members as they left the group.",
   "enterDisplayName": "表示名を入力してください",
-  "enterOptionalPassword": "Enter password (optional)",
+  "enterOptionalPassword": "パスワード入力（任意）",
   "continueYourSession": "Session を続ける",
   "linkDevice": "端末をリンクする",
   "restoreUsingRecoveryPhrase": "アカウントを復元する",
   "or": "or",
-  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/legal/#tos\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
+  "ByUsingThisService...": "本サービスを利用する場合、<a href=\"https://getsession.org/legal/#tos\">利用規約</a>および<a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">プライバシーポリシー</a>に同意するものとします",
   "beginYourSession": "Begin<br />your<br />Session.",
   "welcomeToYourSession": "Welcome to your Session",
-  "newSession": "新しい Session",
+  "newSession": "新しいセッション",
   "searchFor...": "会話やメッセージ、連絡先を検索します。",
   "enterSessionID": "Session ID を入力してください",
   "enterSessionIDOfRecipient": "受信者の Session ID を入力してください",
