Added ability to toggle playback speed for audio messages via context menu,

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -417,5 +417,6 @@
   "unknownCountry": "Unknown Country",
   "device": "Device",
   "destination": "Destination",
-  "learnMore": "Learn more"
+  "learnMore": "Learn more",
+  "playAtCustomSpeed": "Play at $multipler$x speed"
 }
