Added message entries for message link visit warning.

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -419,5 +419,8 @@
   "device": "Device",
   "destination": "Destination",
   "learnMore": "Learn more",
-  "playAtCustomSpeed": "Play at $multipler$x speed"
+  "playAtCustomSpeed": "Play at $multipler$x speed",
+  "linkVisitWarningTitle": "Open this URL in your browser?",
+  "linkVisitWarningMessage": "Are you sure you wish to open $url$ in your browser?",
+  "open": "Open"
 }
