--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -420,7 +420,7 @@
   "destination": "Destination",
   "learnMore": "Learn more",
   "playAtCustomSpeed": "Play at $multipler$x speed",
-  "linkVisitWarningTitle": "Open this URL in your browser?",
-  "linkVisitWarningMessage": "Are you sure you wish to open $url$ in your browser?",
+  "linkVisitWarningTitle": "Open this link in your browser?",
+  "linkVisitWarningMessage": "Are you sure you want to open $url$ in your browser?",
   "open": "Open"
 }
