--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -407,5 +407,8 @@
   "playAtCustomSpeed": "Play at $multipler$x speed",
   "linkVisitWarningTitle": "Open this link in your browser?",
   "linkVisitWarningMessage": "Are you sure you want to open $url$ in your browser?",
-  "open": "Open"
+  "open": "Open",
+  "clickToTrustContact": "Tap to download media",
+  "trustThisContactDialogTitle": "Trust $name$?",
+  "trustThisContactDialogDescription": "Are you sure you want to download media sent by $name$?"
 }
