fix click to trust only dling file received

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -408,7 +408,7 @@
   "linkVisitWarningTitle": "Open this link in your browser?",
   "linkVisitWarningMessage": "Are you sure you want to open $url$ in your browser?",
   "open": "Open",
-  "clickToTrustContact": "Tap to download media",
+  "clickToTrustContact": "Click to download media",
   "trustThisContactDialogTitle": "Trust $name$?",
   "trustThisContactDialogDescription": "Are you sure you want to download media sent by $name$?"
 }
