Persisting conversation pin statuses.

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -411,5 +411,7 @@
   "audioMessageAutoplayDescription": "Automatically play consecutively sent audio messages",
   "clickToTrustContact": "Click to download media",
   "trustThisContactDialogTitle": "Trust $name$?",
-  "trustThisContactDialogDescription": "Are you sure you want to download media sent by $name$?"
+  "trustThisContactDialogDescription": "Are you sure you want to download media sent by $name$?",
+  "pinConversation": "Pin Conversation",
+  "unpinConversation": "Unpin Conversation"
 }
