i18n labels for pin conversations limit

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -411,5 +411,7 @@
   "trustThisContactDialogTitle": "Trust $name$?",
   "trustThisContactDialogDescription": "Are you sure you want to download media sent by $name$?",
   "pinConversation": "Pin Conversation",
-  "unpinConversation": "Unpin Conversation"
+  "unpinConversation": "Unpin Conversation",
+  "pinConversationLimitTitle": "Pinned conversations limit",
+  "pinConversationLimitToastDescription": "You can only pin $number$ conversations"
 }
