--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -53,7 +53,7 @@
   "youLeftTheGroup": "You left the group",
   "youGotKickedFromGroup": "You were removed from the group.",
   "unreadMessage": "1 Unread Message",
-  "unreadMessages": "$count$ Unread Messages",
+  "unreadMessages": "Unread Messages",
   "debugLogExplanation": "This log will be posted publicly online for contributors to view. You may examine and edit it before submitting.",
   "debugLogError": "Something went wrong with the upload! Please consider manually adding your log to the bug you file.",
   "reportIssue": "Report an issue",
