--- a/_locales/nb/messages.json
+++ b/_locales/nb/messages.json
@@ -52,8 +52,8 @@
   "view": "View",
   "youLeftTheGroup": "You have left the group.",
   "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessage": "$count$ Unread Message",
-  "unreadMessages": "$count$ Unread Messages",
+  "unreadMessage": "Unread Message",
+  "unreadMessages": "Unread Messages",
   "debugLogExplanation": "This log will be posted publicly online for contributors to view. You may examine and edit it before submitting.",
   "debugLogError": "Something went wrong with the upload! Please consider manually adding your log to the bug you file.",
   "reportIssue": "Report an issue",
